Angular var names flickering fixed with ngCloak.

--- a/css/maziaj.css
+++ b/css/maziaj.css
@@ -24,6 +24,12 @@ header nav {
   display: flex;
   justify-content: center;
 }
+@media (min-width: 768px) {
+  header nav {
+    justify-content: space-between;
+    padding: 0 50px;
+  }
+}
 header nav a {
   display: inline-block;
   min-width: 80px;
