--- a/less/components/header.less
+++ b/less/components/header.less
@@ -10,6 +10,11 @@ header {
         display: flex;
         justify-content: center;
 
+        @media(min-width: 768px) {
+            justify-content: space-between;
+            padding: 0 50px;
+        }
+
         a {
             &:not(.logotype) {
                 padding-top: 10px;
